# Musing

./: README.md  _config.yml  _toc.yml  pyproject.toml
_build/.doctrees/: README.doctree  environment.pickle  intro.doctree
_build/.doctrees/rl/: test.doctree
_build/html/: .buildinfo  README.html  genindex.html  intro.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: README.md  intro.md
_build/html/_sources/rl/: test.ipynb
_build/html/rl/: test.html
_build/jupyter_execute/rl/: test.ipynb  test.py
