[tool.poetry]
name = "musings"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
